# horsewhisperer

./: .gitignore  .travis.yml  README.md  changelog.md
examples/: example1.cpp
include/horsewhisperer/: horsewhisperer.h
test/: CMakeLists.txt  README.md  main.cpp  system_test_runner.sh  test.h
test/unit/: horsewhisperer_test.cpp
